Remove AOSP style